# CUDA-Accelerated-Clustering-with-JAX

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  build_and_run.ps1  build_and_run.sh  cmake_install.cmake  kmeans_cuda.sln  kmeans_cuda.vcxproj  kmeans_cuda.vcxproj.filters
cuda/: kmeans_cuda.cu  kmeans_cuda.exp  kmeans_cuda.lib
jax/: kmeans_jax.py
r/: analyze_results.R  visualize.R
